# FEM_mfem

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  prompt.md  prompt_细节调整.md  prompt_细节调整2.md  prompt_项目推进.md  prompt_项目推进2.md  项目进一步开发计划.md
configs/: bipolar_thermo_mechanical.json  busbar_electro_thermal_iteration.json  busbar_electro_thermal_no_iteration.json  busbar_electro_thermal_no_iteration_order2.json  busbar_electro_thermal_oneway.json  busbar_electro_thermal_oneway_order2.json  busbar_electro_thermal_picard.json  busbar_etm_nonlinear_transient.json  busbar_etm_nonlinear_transient_vbc.json  busbar_etm_nonlinear_transient_vbc2.json  busbar_etm_nonlinear_transient_vbc3.json  complex_thermal_robin_project.json  steady_electrostatic.json
docs/: adaptive_timestepping.md  bipolar_热-力多物理场问题定义.md  busbar_电-热多物理场问题定义md  design.md  design2.md  design3.md  design4.md  framework_interfaces.md  hybrid_parallel_mfem.md  mfem_api.md  mfem_common_interfaces.md  mfem_mpi_interfaces.md  physics.schema.json  project_interfaces.md  thermal_problem_json_format.md
include/fem/BCbuilder/: MechanicalBCBuilder.hpp  ScalarBCBuilder.hpp
include/fem/app/: Application.hpp  ApplicationPipelines.hpp  FieldRunnerCommon.hpp  FieldRunners.hpp
include/fem/assembler/: ElectrostaticAssembler.hpp  MechanicalAssembler.hpp  ThermalAssembler.hpp
include/fem/assembly/: ElectrostaticAssembler.hpp  IAssembler.hpp  IMechanicalAssembler.hpp  IPoissonAssembler.hpp  LinearElasticityIntegrators.hpp  MechanicalAssembler.hpp  MfemLinearElasticityAssembler.hpp  MfemParallelLinearElasticityAssembler.hpp  MfemParallelPoissonAssembler.hpp  MfemPoissonAssembler.hpp  PoissonIntegrators.hpp  ThermalAssembler.hpp
include/fem/coeff/: CoefficientManager.hpp  Coeffmanagaer.hpp  ElectrostaticCoeffs.hpp  MechanicalCoeffs.hpp  ThermalCoeffs.hpp
include/fem/coupling/: MultiPhysicsCoupler.hpp  PicardCoupler.hpp
include/fem/fe/: FeContext.hpp  MechanicalFeContext.hpp  ParallelMechanicalFeContext.hpp  ParallelScalarFeContext.hpp  ScalarFeContext.hpp
include/fem/frontend/: Config.hpp  ConfigLoader.hpp  Expression.hpp
include/fem/integrator/: LinearElasticityIntegrators.hpp  MechanicalIntegrators.hpp  PoissonIntegrators.hpp
include/fem/io/: ParaviewExporter.hpp
include/fem/log/: Logger.hpp
include/fem/mapping/: CoefficientFactory.hpp
include/fem/material/: MaterialDatabase.hpp
include/fem/output/: ParaviewExporter.hpp  ResultExporter.hpp  SolutionTextExporter.hpp
include/fem/physics/: ElectrostaticFieldSolver.cpp  ElectrostaticFieldSolver.hpp  MechanicalFieldSolver.cpp  MechanicalFieldSolver.hpp  TermalFieldSolver.cpp  ThermalFieldSolver.hpp
include/fem/post/: MechanicalPostProcessor.hpp  SolutionTextExporter.hpp
include/fem/solver/: ILinearSolver.hpp  LinearSolverFactory.hpp  MfemAmgSolver.hpp  MfemMumpsSolver.hpp  MfemPardisoSolver.hpp  MfemPcgSolver.hpp  MfemUmfpackSolver.hpp
include/fem/steady/: SteadySolver.hpp
include/fem/transient/: TransientSolver.hpp  TransientUtils.hpp
mesh_data/: bipolar_plate.mphtxt  bipolar_plate.msh  busbar.mphtxt  busbar.msh  complex_tet_mesh.mphtxt  complex_tet_mesh.msh
src/BCbuilder/: MechanicalBCBuilder.cpp  ScalarBCBuilder.cpp
src/app/: Application.cpp  ApplicationPipelines.cpp  CoupledFieldRunners.cpp  FieldRunnerCommon.cpp  FieldRunners.cpp  MechanicalFieldRunner.cpp  ScalarFieldRunner.cpp
src/assembler/: ElectrostaticAssembler.cpp  MechanicalAssembler.cpp  ThermalAssembler.cpp
src/assembly/: ElectrostaticAssembler.cpp  LinearElasticityIntegrators.cpp  MechanicalAssembler.cpp  MfemLinearElasticityAssembler.cpp  MfemParallelLinearElasticityAssembler.cpp  MfemParallelPoissonAssembler.cpp  MfemPoissonAssembler.cpp  PoissonIntegrators.cpp  ThermalAssembler.cpp
src/coeff/: CoefficientManager.cpp  ElectrostaticCoeffs.cpp  MechanicalCoeffs.cpp  ThermalCoeffs.cpp
src/coupling/: MultiPhysicsCoupler.cpp  PicardCoupler.cpp
src/fe/: FeContext.cpp  MechanicalFeContext.cpp  ParallelMechanicalFeContext.cpp  ParallelScalarFeContext.cpp  ScalarFeContext.cpp
src/frontend/: ConfigLoader.cpp  Expression.cpp
src/integrator/: LinearElasticityIntegrators.cpp  MechanicalIntegrators.cpp  PoissonIntegrators.cpp
src/io/: ParaviewExporter.cpp
src/log/: Logger.cpp
src/mapping/: CoefficientFactory.cpp
src/output/: ParaviewExporter.cpp  ResultExporter.cpp  SolutionTextExporter.cpp
src/physics/: ElectrostaticFieldSolver.cpp  MechanicalFieldSolver.cpp  ThermalFieldSolver.cpp
src/post/: MechanicalPostProcessor.cpp  SolutionTextExporter.cpp
src/solver/: LinearSolverFactory.cpp  MfemAmgSolver.cpp  MfemMumpsSolver.cpp  MfemPardisoSolver.cpp  MfemPcgSolver.cpp  MfemUmfpackSolver.cpp
src/steady/: SteadySolver.cpp
src/transient/: TransientSolver.cpp  TransientUtils.cpp
tools/: compare_solution_txt.py  compare_time_curves.py  mphtxt_to_msh.py  脚本查询.md
